# GTests

./: CMakeLists.txt
src/: CMakeLists.txt  deliverycompany.cpp  deliverycompany.h
src/vehicle/: abstractvehicle.cpp  abstractvehicle.h  car.cpp  car.h
tests/: CMakeLists.txt  abstractvehicle_test.cpp  calculatedeliverytime_test.cpp  deliverycompany_test.cpp  testmain.cpp
